--- a/public/package.json
+++ b/public/package.json
@@ -56,6 +56,8 @@
     "ng2-nouislider": "1.7.12",
     "ngx-chips": "2.1.0",
     "nouislider": "9.2.0",
+    "pdfmake": "^0.1.68",
+    "pdfmake-wrapper": "^2.0.0",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
     "sweetalert2": "7.22.0",
